Added Score System on the top left corner. Furthermore, slightly refactored List logic (list.addFirst has an O(1) time complexity)